added POST + python CGI

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,10 @@
         <p>If you are seeing this, that means that this server is working successfully.</p>
         <p>This is the default page of Seaver Server.</p>
         <p>Now you can configure this server -> "seaver.json".</p>
+        <h3>Sample Test</h3>
+        <p>Java Api Website : <a href="java-api-website/">Click</a></p>
+        <p>Post Sample : <a href="sample/post_sample.html">Click</a></p>
+        <p>Get Sample : <a href="sample/get_sample.html">Click</a></p>
     </div>
 </body>
 </html>
